add projech ntn

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <a class="btn" href="/assets/images/Fresher Developer_NGO TAN NGUYEN.pdf" download>Download CV <i class="fa-solid fa-file"></i></a>
+            <a class="btn" href="/assets/images/FresherDeveloper_NGOTANNGUYEN.pdf" download>Download CV <i class="fa-solid fa-file"></i></a>
         </div>
         <div class="nav-menu-btn"> 
             <i class="fa-solid fa-bars" onclick="myMenuFunction()"></i>
@@ -63,7 +63,7 @@
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn">About Me</button>
-                <a class="btn" href="/assets/images/Fresher Developer_NGO TAN NGUYEN.pdf" download>Download CV <i class="fa-solid fa-file"></i></a>
+                <a class="btn" href="/assets/images/FresherDeveloper_NGOTANNGUYEN.pdf" download>Download CV <i class="fa-solid fa-file"></i></a>
             </div>
             <div class="social_icons">
                 <a class="icon" href="https://www.instagram.com/tn0.41/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
