add projech ntn

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ outside out of office 365
                         <div id="text" data-text="">                            
                         </div>
                     </div>
-                    <p><i class="uil uil-envelope"></i> FullStack Webside</p>
+                    <p><i class="uil uil-envelope"></i> FullStack Website</p>
                 </div>
              </div>
           </div>
